# ros2-ai-amr-repo1

./: .gitignore  README.md  ros2_ai_amr.repos
client/: package-lock.json  package.json
client/src/: App.tsx  constants.ts  types.ts
client/src/api/: auth.ts  client.ts  orders.ts  products.ts  users.ts
client/src/hooks/: useWebSocket.ts
client/src/pages/: CatalogPage.tsx  LoginPage.tsx  OrdersPage.tsx  ProfilePage.tsx
firmware/fork_esp32/: fork_esp32.ino
server/app/: database.py  main.py  models.py  schemas.py
src/S_Mart/Gazebo/smart_sim_bringup/: CMakeLists.txt  package.xml
src/S_Mart/Gazebo/smart_sim_bringup/config/: bridge_clock.yaml  bridge_robot1.yaml  bridge_robot2.yaml  spawn.yaml
src/S_Mart/Gazebo/smart_sim_bringup/launch/: sim.launch.py
src/S_Mart/Gazebo/smart_sim_bringup/models/burger1/: model.config  model.sdf
src/S_Mart/Gazebo/smart_sim_bringup/models/burger2/: model.config  model.sdf
src/S_Mart/Gazebo/smart_sim_bringup/tools/: gen_world.py  mission_bench.py
src/S_Mart/Gazebo/smart_sim_bringup/worlds/: smart_arena.sdf
src/S_Mart/Gazebo/traffic_results/: results_A_real.csv  results_A_sim.csv  results_B_real.csv  results_B_sim.csv
src/S_Mart/ai_detector/: README.md  package.xml  setup.cfg  setup.py
src/S_Mart/ai_detector/ai_detector/: inbound_detector.py  outbound_detector.py
src/S_Mart/ai_detector/config/: product_map.yaml
src/S_Mart/ai_detector/launch/: ai_bringup.launch.py  camera_bringup.launch.py
src/S_Mart/aruco_docking/: package.xml  setup.py
src/S_Mart/aruco_docking/aruco_docking/: aruco_estimator_node.py  dock_controller_node.py
src/S_Mart/aruco_docking/launch/: dock.launch.py
src/S_Mart/aruco_docking/scripts/: README.md  lidar_wall_normal_probe.py  marker_normal_probe.py
src/S_Mart/fleet_manager/: package.xml  setup.cfg  setup.py
src/S_Mart/fleet_manager/fleet_manager/: fleet_manager_node.py
src/S_Mart/human_detector/: package.xml  setup.py
src/S_Mart/human_detector/human_detector/: human_detector_node.py
src/S_Mart/human_detector/launch/: human_detector.launch.py
src/S_Mart/robot_fsm/: package.xml  setup.cfg  setup.py
src/S_Mart/robot_fsm/config/: locations.yaml
src/S_Mart/robot_fsm/robot_fsm/: amcl_init.py  fork.py  robot_fsm.py  states.py  travel.py  work.py
src/S_Mart/smart_bringup/: CMakeLists.txt  package.xml
src/S_Mart/smart_bringup/launch/: perception.launch.py  robot_all.launch.py  server.launch.py
src/S_Mart/smart_bt_plugins/: CMakeLists.txt  package.xml
src/S_Mart/smart_bt_plugins/include/smart_bt_plugins/: human_stop_condition.hpp
src/S_Mart/smart_bt_plugins/src/: human_stop_condition.cpp
src/S_Mart/smart_domain_bridge/: CMakeLists.txt  package.xml
src/S_Mart/smart_domain_bridge/config/: bridge.yaml
src/S_Mart/smart_domain_bridge/launch/: bridge.launch.py
src/S_Mart/smart_gui/: package.xml  setup.cfg  setup.py
src/S_Mart/smart_gui/smart_gui/: camera_link.py  db_link.py  main.py  map_view.py  ops_page.py  panels.py  ros_link.py  theme.py  vision_page.py
src/S_Mart/smart_nav_bringup/: CMakeLists.txt  package.xml
src/S_Mart/smart_nav_bringup/behavior_trees/: smart_navigate.xml
src/S_Mart/smart_nav_bringup/launch/: navigation.launch.py
src/S_Mart/smart_nav_bringup/maps/: map_gimp.pgm  map_gimp.yaml  map_origin.pgm
src/S_Mart/smart_nav_bringup/params/: nav2_params.yaml
src/S_Mart/smart_nav_bringup/scripts/: nav2_node_goal
src/S_Mart/smart_robot_bringup/: CMakeLists.txt  package.xml
src/S_Mart/smart_robot_bringup/config/camera_info/: AFL1.yaml  AFL2.yaml
src/S_Mart/smart_robot_bringup/launch/: robot.launch.py
src/S_Mart/smart_robot_bringup/param/: burger_ekf.yaml  ekf.yaml
src/S_Mart/task_manager/: package.xml  setup.py
src/S_Mart/task_manager/task_manager/: task_manager_node.py
src/S_Mart/traffic_manager/: package.xml  setup.cfg  setup.py
src/S_Mart/traffic_manager/graph/: nodes.yaml
src/S_Mart/traffic_manager/traffic_manager/: graph.py  router.py  traffic.py  traffic_node.py
