<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_fsm</name>
  <version>0.0.1</version>
  <description>S-Mart 로봇 FSM — 각 로봇(도메인 30/31)에서 실행. Traffic Manager와
  토픽 통신하며 받은 구간을 nav2로 각진 주행. 도킹/포크는 팀원 도킹서버 연결 예정.</description>
  <maintainer email="difj3839@gmail.com">gustn</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
