<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_bt_plugins</name>
  <version>0.1.0</version>
  <description>S-Mart 커스텀 Nav2 BT 플러그인 (HumanStopCondition: /human_stop 시 FollowPath halt)</description>
  <maintainer email="difj3839@gmail.com">gustn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
