<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_gui</name>
  <version>0.0.1</version>
  <description>Smart Mart 관제 UI — PyQt5 + rclpy 관리자 대시보드</description>
  <maintainer email="cks2904@naver.com">codelab</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- 맵 위젯이 5×5 노드 그래프를 traffic_manager의 Graph에서 그대로 읽는다.
       그래프 정의(nodes.yaml·인접 규칙)를 UI가 따로 갖지 않기 위함. -->
  <depend>traffic_manager</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-psycopg2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
