<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_nav_bringup</name>
  <version>0.1.0</version>
  <description>S-Mart AMR용 nav2 실행(bringup) 패키지. 벤더(turtlebot3) 원본을 건드리지 않고
  우리 params/map/rviz로 nav2를 실행한다. launch·params·map·rviz를 self-contained로 포함.</description>
  <maintainer email="difj3839@gmail.com">gustn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- nav2_node_goal 테스트 노드 런타임 의존 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- 노드 그래프(nodes.yaml)를 path_plan_manager share에서 읽음 -->
  <exec_depend>path_plan_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
