<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_sim_bringup</name>
  <version>0.1.0</version>
  <description>
    S-Mart Gazebo 시뮬레이션 — 실기 아레나(1.8x1.8m, 5x5 노드) 재현.
    실기와 동일한 도메인 분리(로봇 30/31, 서버 12 + domain_bridge) 구조로
    nav2/fsm/traffic을 무수정 검증 + 라우팅 전략 A/B 시간 측정.
  </description>
  <maintainer email="difj3839@gmail.com">gustn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>smart_nav_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
